<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBg"
    tools:context=".ui.AboutNewOrderActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dim_10sp"
            android:paddingLeft="@dimen/dim_10sp"
            android:paddingTop="@dimen/dim_10sp"
            android:paddingEnd="@dimen/dim_10sp"
            android:paddingRight="@dimen/dim_10sp"
            android:paddingBottom="@dimen/dim_10sp"
            android:stretchColumns="*">

            <TableRow
                android:background="@color/tvTextColor"
                android:paddingStart="40sp"
                android:paddingLeft="40sp"
                android:paddingEnd="40sp"
                android:paddingRight="40sp">

                <TextView
                    android:id="@+id/aoaID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_8sp"
                    android:layout_marginLeft="@dimen/dim_8sp"
                    android:text="@string/aoa_id"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />

                <TextView
                    android:id="@+id/aoaIdText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10sp"
                    android:layout_marginLeft="@dimen/dim_10sp"
                    android:text="20180306301"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />
            </TableRow>

            <TableRow
                android:background="@color/tvHintTextColor"
                android:paddingStart="40sp"
                android:paddingLeft="40sp"
                android:paddingEnd="40sp"
                android:paddingRight="40sp">

                <TextView
                    android:id="@+id/aoaDeadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_8sp"
                    android:layout_marginLeft="@dimen/dim_8sp"
                    android:text="@string/aoa_deadline"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />

                <TextView
                    android:id="@+id/aoaDeadlineText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10sp"
                    android:layout_marginLeft="@dimen/dim_10sp"
                    android:text="10.09.2018"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />
            </TableRow>

            <TableRow
                android:background="@color/tvTextColor"
                android:paddingStart="40sp"
                android:paddingLeft="40sp"
                android:paddingEnd="40sp"
                android:paddingRight="40sp">

                <TextView
                    android:id="@+id/aoaLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_8sp"
                    android:layout_marginLeft="@dimen/dim_8sp"
                    android:text="@string/aoa_language"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />

                <TextView
                    android:id="@+id/aoaLanguageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10sp"
                    android:layout_marginLeft="@dimen/dim_10sp"
                    android:text="Русский - Английский"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />
            </TableRow>

            <TableRow
                android:background="@color/tvHintTextColor"
                android:paddingStart="40sp"
                android:paddingLeft="40sp"
                android:paddingEnd="40sp"
                android:paddingRight="40sp">

                <TextView
                    android:id="@+id/aoaDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_8sp"
                    android:layout_marginLeft="@dimen/dim_8sp"
                    android:text="@string/aoa_direction"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />

                <TextView
                    android:id="@+id/aoaDirectionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10sp"
                    android:layout_marginLeft="@dimen/dim_10sp"
                    android:text="ИТ, Политика"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />
            </TableRow>

            <TableRow
                android:background="@color/tvTextColor"
                android:paddingStart="40sp"
                android:paddingLeft="40sp"
                android:paddingEnd="40sp"
                android:paddingRight="40sp">

                <TextView
                    android:id="@+id/aoaPageCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_8sp"
                    android:layout_marginLeft="@dimen/dim_8sp"
                    android:text="@string/aoa_page_count"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />

                <TextView
                    android:id="@+id/aoaPageCountText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10sp"
                    android:layout_marginLeft="@dimen/dim_10sp"
                    android:text="00 стр."
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />
            </TableRow>

            <TableRow
                android:background="@color/tvHintTextColor"
                android:paddingStart="40sp"
                android:paddingLeft="40sp"
                android:paddingEnd="40sp"
                android:paddingRight="40sp">

                <TextView
                    android:id="@+id/aoaPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_8sp"
                    android:layout_marginLeft="@dimen/dim_8sp"
                    android:text="@string/aoa_price"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />

                <TextView
                    android:id="@+id/aoaPriceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_10sp"
                    android:layout_marginLeft="@dimen/dim_10sp"
                    android:text="00000 тенге"
                    android:textColor="@color/activityBg"
                    android:textSize="@dimen/dim_14sp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/aoa_btn_dwn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/bg_btn"
            android:paddingStart="5sp"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:paddingEnd="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp"
            android:text="@string/aoa_btn_download"
            android:textColor="@color/btnTextColor" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2sp"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/aoa_btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/bg_btn"
            android:paddingStart="5sp"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:paddingEnd="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp"
            android:text="@string/aoa_btn_finish"
            android:textColor="@color/btnTextColor" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>