<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="kz.ftsystem.yel.ftst.ui.AuthenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="281dp"
            android:layout_height="335dp"
            android:layout_gravity="center|top"
            android:contentDescription="TODO"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textILLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="30sp"
                android:layout_marginEnd="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/caviar_dreams"
                android:hint="@string/enter_login"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="8sp"
                android:paddingLeft="8sp"
                android:paddingTop="8sp"
                android:paddingEnd="8sp"
                android:paddingRight="8sp"
                android:paddingBottom="8sp"
                android:text=""
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent" />

            <!--<EditText-->
            <!--android:id="@+id/etLogin"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginEnd="30sp"-->
            <!--android:layout_marginLeft="30sp"-->
            <!--android:layout_marginRight="30sp"-->
            <!--android:layout_marginStart="30sp"-->
            <!--android:layout_marginTop="30sp"-->
            <!--android:background="@drawable/bg_edit_text"-->
            <!--android:hint="@string/enter_login"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:inputType="text"-->
            <!--android:paddingBottom="8sp"-->
            <!--android:paddingEnd="8sp"-->
            <!--android:paddingLeft="8sp"-->
            <!--android:paddingRight="8sp"-->
            <!--android:paddingStart="8sp"-->
            <!--android:paddingTop="8sp"-->
            <!--android:textColor="@color/tvTextColor"-->
            <!--android:textColorHint="@color/tvHintTextColor" />-->

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textILPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/etPswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="30sp"
                android:layout_marginEnd="30sp"
                android:layout_marginRight="30sp"
                android:fontFamily="@font/caviar_dreams"
                android:hint="@string/enter_pswd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="8sp"
                android:paddingLeft="8sp"
                android:paddingTop="8sp"
                android:paddingEnd="8sp"
                android:paddingRight="8sp"
                android:paddingBottom="8sp"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:text=""
                android:textColor="#ffffff"
                android:textColorHint="@color/colorAccent"
                android:textStyle="italic" />

            <!--<EditText-->
            <!--android:id="@+id/etPswd"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginEnd="30sp"-->
            <!--android:layout_marginLeft="30sp"-->
            <!--android:layout_marginRight="30sp"-->
            <!--android:layout_marginStart="30sp"-->
            <!--android:layout_marginTop="30sp"-->
            <!--android:background="@drawable/bg_edit_text"-->
            <!--android:hint="@string/enter_pswd"-->
            <!--android:imeOptions="actionDone"-->
            <!--android:inputType="textPassword"-->
            <!--android:paddingBottom="8sp"-->
            <!--android:paddingEnd="8sp"-->
            <!--android:paddingLeft="8sp"-->
            <!--android:paddingRight="8sp"-->
            <!--android:paddingStart="8sp"-->
            <!--android:paddingTop="8sp"-->
            <!--android:textColor="@color/tvTextColor"-->
            <!--android:textColorHint="@color/tvHintTextColor" />-->

        </com.google.android.material.textfield.TextInputLayout>


        <!--<View-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="2sp"-->
        <!--android:layout_marginBottom="30sp"-->
        <!--android:layout_marginEnd="30sp"-->
        <!--android:layout_marginLeft="30sp"-->
        <!--android:layout_marginRight="30sp"-->
        <!--android:layout_marginStart="30sp"-->
        <!--android:layout_marginTop="30sp"-->
        <!--android:background="@color/colorAccent">-->

        <!--</View>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/caviar_dreams"
            android:onClick="onClick"
            android:paddingStart="8sp"
            android:paddingLeft="8sp"
            android:paddingTop="8sp"
            android:paddingEnd="8sp"
            android:paddingRight="8sp"
            android:paddingBottom="8sp"
            android:text="@string/btn_enter"
            android:textColor="@color/btnTextColor"
            android:textSize="18sp"
            android:textStyle="bold|italic" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
